--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CloudCVfy Your Code</title>
 </head>
 <body>
 <div id="app"></div>
-<script src="./bundle.js"></script>
+<script src="/bundle.js"></script>
 </body>
 </html>
