--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CloudCVfy Your Code</title>
+  <title>CVFY</title>
 </head>
 <body>
 <div id="app"></div>
